# bitbucket-jira-cli

./: CONTRIBUTING.md  Dockerfile  README.md  docusaurus.config.ts  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sidebars.ts
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_feature_request.yaml  3_question.yaml  config.yml
.github/workflows/: docker-build.yml  docker-publish.yml  docs.yml  python-build.yml  python-publish.yml  release.yml
bitbucket_jira_cli/: __init__.py  _async.py  config.py  context.py  errors.py  git.py  gitauth.py  interaction.py  jira_fields.py  jira_ops.py  main.py  render.py  timefmt.py  ui.py
bitbucket_jira_cli/api/: __init__.py  adf.py  base.py  bitbucket.py  jira.py
bitbucket_jira_cli/auth/: __init__.py  commands.py  store.py
bitbucket_jira_cli/commands/: __init__.py  _common.py  alias.py  board.py  config.py  issue.py  misc.py  pipeline.py  pr.py  release.py  repo.py  ruleset.py  search.py  skill.py  snippet.py  sshkey.py  variable.py
docs/: contributing.md  index.md  installation.md  intro.md  usage.md
docs/guides/: agents.md  branch-key.md  configuration.md  environment.md  exit-codes.md  formatting.md
docs/plan/: command-mapping.md
docs/reference/: _category_.json  api.md  browse.md  index.md  status.md
docs/reference/alias/: _category_.json  delete.md  index.md  list.md  set.md
docs/reference/auth/: _category_.json  git-credential.md  index.md  login.md  logout.md  setup-git.md  status.md  token.md
docs/reference/board/: _category_.json  index.md  list.md  sprints.md
docs/reference/config/: _category_.json  get.md  index.md  list.md  set.md
docs/reference/issue/: _category_.json  close.md  comment.md  create.md  delete.md  develop.md  edit.md  fields.md  index.md  list.md  status.md  transition.md  view.md
docs/reference/pipeline/: _category_.json  index.md  list.md  logs.md  rerun.md  run.md  stop.md  view.md  watch.md
docs/reference/pr/: _category_.json  checkout.md  checks.md  close.md  comment.md  create.md  diff.md  edit.md  index.md  list.md  merge.md  ready.md  reopen.md  review.md  status.md  task.md  view.md
docs/reference/release/: _category_.json  create.md  delete.md  edit.md  index.md  list.md  release.md  unrelease.md  view.md
docs/reference/repo/: _category_.json  clone.md  create.md  delete.md  deploy-key.md  edit.md  file.md  fork.md  index.md  list.md  ls.md  rename.md  set-default.md  view.md
docs/reference/ruleset/: _category_.json  index.md  list.md
docs/reference/search/: _category_.json  code.md  index.md  issues.md  repos.md
docs/reference/skill/: _category_.json  index.md  install.md
docs/reference/snippet/: _category_.json  create.md  delete.md  index.md  list.md  view.md
docs/reference/ssh-key/: _category_.json  add.md  delete.md  index.md  list.md
docs/reference/variable/: _category_.json  delete.md  index.md  list.md  set.md
docs/research/: prior-art.md
docs/stylesheets/: extra.css
overrides/: main.html
research/: tui-review.md
scripts/: bump-docs-version.sh  gen_cli_docs.py
skills/bitbucket-jira-cli/: SKILL.md
src/components/HomepageFeatures/: index.tsx
src/components/quickstart/: index.tsx
src/css/: custom.css
src/pages/: index.tsx
static/img/: site.webmanifest
tests/: test_adf.py  test_cli.py  test_context.py  test_git.py  test_gitauth.py  test_interaction.py  test_new_commands.py  test_skill.py  test_timefmt.py
